Git Tests/force-app/main/default/default/objects/Order/fields/AprovadoBonificacao__c.field-meta.xml
<CustomField>
    <fullName>AprovadoBonificacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Bonificação?</label>
    <type>Checkbox</type>
</CustomField>