Git Tests/force-app/main/default/default/objects/Order/fields/AprovadoMalha__c.field-meta.xml
<CustomField>
    <fullName>AprovadoMalha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Malha?</label>
    <type>Checkbox</type>
</CustomField>