Git Tests/force-app/main/default/default/objects/Order/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <externalId>true</externalId>
    <label>Comprovante de pagamento Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>