Git Tests/force-app/main/default/default/objects/Order/fields/CanalEntrada__c.field-meta.xml
<CustomField>
    <fullName>CanalEntrada__c</fullName>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACSC - Associação Congregação de Santa Catarina</fullName>
            </value>
            <value>
                <fullName>Apoio</fullName>
            </value>
            <value>
                <fullName>Ariba/Amil</fullName>
            </value>
            <value>
                <fullName>Bionexo</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>CONTRATO</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>E-MAIL MARKETING</fullName>
            </value>
            <value>
                <fullName>GERENCIA</fullName>
                <label>GERÊNCIA</label>
            </value>
            <value>
                <fullName>GTPLAN</fullName>
            </value>
            <value>
                <fullName>Humma</fullName>
            </value>
            <value>
                <fullName>INPART</fullName>
            </value>
            <value>
                <fullName>Max Cotações</fullName>
            </value>
            <value>
                <fullName>Medical VM</fullName>
            </value>
            <value>
                <fullName>MICROSOFT TEAMS</fullName>
            </value>
            <value>
                <fullName>Movi Tech</fullName>
            </value>
            <value>
                <fullName>MVM RS</fullName>
            </value>
            <value>
                <fullName>NEOGRID</fullName>
            </value>
            <value>
                <fullName>Nimbi</fullName>
            </value>
            <value>
                <fullName>PANFLETO</fullName>
            </value>
            <value>
                <fullName>Paradigma</fullName>
            </value>
            <value>
                <fullName>Plani Max</fullName>
            </value>
            <value>
                <fullName>PORTAL FAEPA</fullName>
            </value>
            <value>
                <fullName>Portal HR</fullName>
            </value>
            <value>
                <fullName>PORTAL MULTICENTRAIS</fullName>
            </value>
            <value>
                <fullName>PORTAL MV SISTEMA</fullName>
            </value>
            <value>
                <fullName>PORTAL SAO MARTINHO</fullName>
            </value>
            <value>
                <fullName>PORTAL SGHCOT</fullName>
            </value>
            <value>
                <fullName>PORTAL SINCONECTA</fullName>
            </value>
            <value>
                <fullName>PORTAL UNIFENAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>