Git Tests/force-app/main/default/default/objects/Order/fields/ClasseCliente__c.field-meta.xml
<CustomField>
    <fullName>ClasseCliente__c</fullName>
    <formula>Account.Classe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classe do cliente</label>
    <type>Text</type>
</CustomField>