Git Tests/force-app/main/default/default/objects/Order/fields/ClientePedidoPai__c.field-meta.xml
<CustomField>
    <fullName>ClientePedidoPai__c</fullName>
    <formula>CASESAFEID(PedidoPai__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente do pedido pai</label>
    <type>Text</type>
</CustomField>