Git Tests/force-app/main/default/default/objects/Order/fields/CNAECliente__c.field-meta.xml
<CustomField>
    <fullName>CNAECliente__c</fullName>
    <formula>Account.CNAE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNAE do cliente</label>
    <type>Text</type>
</CustomField>