Git Tests/force-app/main/default/default/objects/Order/fields/CodigoGrupoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupoCliente__c</fullName>
    <formula>Account.CodigoGrupoClientes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do grupo de clientes</label>
    <type>Text</type>
</CustomField>