Git Tests/force-app/main/default/default/objects/Order/fields/CodigoLoja__c.field-meta.xml
<CustomField>
    <fullName>CodigoLoja__c</fullName>
    <formula>Account.CodigoLoja__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código/loja</label>
    <type>Text</type>
</CustomField>