Git Tests/force-app/main/default/default/objects/Order/fields/CodigoPedido__c.field-meta.xml
<CustomField>
    <fullName>CodigoPedido__c</fullName>
    <description>Chave única: Número do pedido + Código do CD</description>
    <externalId>true</externalId>
    <label>Código do pedido</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>