Git Tests/force-app/main/default/default/objects/Order/fields/ComentariosCancelamento__c.field-meta.xml
<CustomField>
    <fullName>ComentariosCancelamento__c</fullName>
    <label>Comentários (opcional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>