Git Tests/force-app/main/default/default/objects/Order/fields/CompartilhamentoRealizado__c.field-meta.xml
<CustomField>
    <fullName>CompartilhamentoRealizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compartilhamento Realizado?</label>
    <type>Checkbox</type>
</CustomField>