Git Tests/force-app/main/default/default/objects/Order/fields/ComplementoPedido__c.field-meta.xml
<CustomField>
    <fullName>ComplementoPedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido original</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos (Complemento do pedido)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>