Git Tests/force-app/main/default/default/objects/Order/fields/ComprovanteAnexado__c.field-meta.xml
<CustomField>
    <fullName>ComprovanteAnexado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprovante anexado</label>
    <type>Checkbox</type>
</CustomField>