Git Tests/force-app/main/default/default/objects/Order/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>