Git Tests/force-app/main/default/default/objects/Order/fields/ContatoOrcamento__c.field-meta.xml
<CustomField>
    <fullName>ContatoOrcamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato do orçamento</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>