Git Tests/force-app/main/default/default/objects/Order/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <formula>Account.CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF</label>
    <type>Text</type>
</CustomField>