Git Tests/force-app/main/default/default/objects/Order/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação</label>
    <type>DateTime</type>
</CustomField>