Git Tests/force-app/main/default/default/objects/Order/fields/CreatedDatetime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDatetime__c</fullName>
    <label>Data da criação</label>
    <type>DateTime</type>
</CustomField>