Git Tests/force-app/main/default/default/objects/Order/fields/CriadoPor__c.field-meta.xml
<CustomField>
    <fullName>CriadoPor__c</fullName>
    <label>Criado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>