Git Tests/force-app/main/default/default/objects/Order/fields/Dataaprovacao__c.field-meta.xml
<CustomField>
    <fullName>Dataaprovacao__c</fullName>
    <label>Data de aprovação</label>
    <type>DateTime</type>
</CustomField>