Git Tests/force-app/main/default/default/objects/Order/fields/DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataCriacao__c</fullName>
    <description>Campo criado para armazenar data e hora do momento em que o botão &apos;Criar pedido&apos; é clicado.</description>
    <label>Data de criação</label>
    <type>Date</type>
</CustomField>