Git Tests/force-app/main/default/default/objects/Order/fields/DataDivisaoParcelas__c.field-meta.xml
<CustomField>
    <fullName>DataDivisaoParcelas__c</fullName>
    <label>Data de divisão de parcelas</label>
    <type>Date</type>
</CustomField>