Git Tests/force-app/main/default/default/objects/Order/fields/DataEntrega__c.field-meta.xml
<CustomField>
    <fullName>DataEntrega__c</fullName>
    <label>Data prevista de entrega</label>
    <type>Date</type>
</CustomField>