Git Tests/force-app/main/default/default/objects/Order/fields/Datageracaopedido__c.field-meta.xml
<CustomField>
    <fullName>Datageracaopedido__c</fullName>
    <label>Data de geração do pedido</label>
    <type>DateTime</type>
</CustomField>