Git Tests/force-app/main/default/default/objects/Order/fields/DataUltimaModificacao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaModificacao__c</fullName>
    <label>Data da última modificação</label>
    <type>Date</type>
</CustomField>