Git Tests/force-app/main/default/default/objects/Order/fields/DescricaoStatusEntrega__c.field-meta.xml
<CustomField>
    <fullName>DescricaoStatusEntrega__c</fullName>
    <label>Descrição do status de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>