Git Tests/force-app/main/default/default/objects/Order/fields/Endereco_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Endereco_Entrega__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Endereço de entrega</label>
    <referenceTo>EnderecoEntrega__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>