Git Tests/force-app/main/default/default/objects/Order/fields/EnderecoEntrega__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEntrega__c</fullName>
    <label>Endereço de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>