Git Tests/force-app/main/default/default/objects/Order/fields/EnderecoRecebedor__c.field-meta.xml
<CustomField>
    <fullName>EnderecoRecebedor__c</fullName>
    <label>Endereço do recebedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>