Git Tests/force-app/main/default/default/objects/Order/fields/EnviarAprovacao__c.field-meta.xml
<CustomField>
    <fullName>EnviarAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar para aprovação</label>
    <type>Checkbox</type>
</CustomField>