Git Tests/force-app/main/default/default/objects/Order/fields/ErroIntegracaoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracaoAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de integração Aprovação</label>
    <type>Checkbox</type>
</CustomField>