Git Tests/force-app/main/default/default/objects/Order/fields/ErroIntegracaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracaoCancelamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de integração Cancelamento</label>
    <type>Checkbox</type>
</CustomField>