Git Tests/force-app/main/default/default/objects/Order/fields/ErroIntegracaoConfirmacao__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracaoConfirmacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de integração Confirmação</label>
    <type>Checkbox</type>
</CustomField>