Git Tests/force-app/main/default/default/objects/Order/fields/ErroIntegracaoRejeitado__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracaoRejeitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de integração Rejeitado</label>
    <type>Checkbox</type>
</CustomField>