Git Tests/force-app/main/default/default/objects/Order/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>