Git Tests/force-app/main/default/default/objects/Order/fields/FileIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>FileIntegrationStatus__c</fullName>
    <label>Status da integração de comprovante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>