Git Tests/force-app/main/default/default/objects/Order/fields/GanhoParcialTotal__c.field-meta.xml
<CustomField>
    <fullName>GanhoParcialTotal__c</fullName>
    <description>Como gestora do produto, desejo saber se o pedido foi ganho totalmente ou parcialmente, para que assim tenha mais informações para decisões/estratégias de negócio</description>
    <label>Ganho Parcial ou Total</label>
    <length>32</length>
    <type>Text</type>
</CustomField>