Git Tests/force-app/main/default/default/objects/Order/fields/GerarBoleto__c.field-meta.xml
<CustomField>
    <fullName>GerarBoleto__c</fullName>
    <label>Gerar Boleto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>