Git Tests/force-app/main/default/default/objects/Order/fields/GrauRiscoCliente__c.field-meta.xml
<CustomField>
    <fullName>GrauRiscoCliente__c</fullName>
    <formula>Account.GrauRisco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grau de risco do cliente</label>
    <type>Text</type>
</CustomField>