Git Tests/force-app/main/default/default/objects/Order/fields/Idportalcotacoes__c.field-meta.xml
<CustomField>
    <fullName>Idportalcotacoes__c</fullName>
    <externalId>true</externalId>
    <label>Id do portal de cotações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>