Git Tests/force-app/main/default/default/objects/Order/fields/Inconsistencias__c.field-meta.xml
<CustomField>
    <fullName>Inconsistencias__c</fullName>
    <label>Inconsistências</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>