Git Tests/force-app/main/default/default/objects/Order/fields/InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>InscricaoEstadual__c</fullName>
    <formula>Account.InscricaoEstadual__c</formula>
    <label>Inscrição estadual</label>
    <type>Text</type>
</CustomField>