Git Tests/force-app/main/default/default/objects/Order/fields/KeyAccount__c.field-meta.xml
<CustomField>
    <fullName>KeyAccount__c</fullName>
    <formula>Text(Account.KeyAccount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Text</type>
</CustomField>