Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracao__c</fullName>
    <label>Mensagem Erro Integração</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>