Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracaoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoAprovacao__c</fullName>
    <label>Mensagem erro de integração Aprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>