Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoCancelamento__c</fullName>
    <label>Mensagem erro de integração Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>