Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracaoCartaTroca__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoCartaTroca__c</fullName>
    <label>Mensagem de erro da carta de troca</label>
    <type>TextArea</type>
</CustomField>