Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracaoConfirmacao__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoConfirmacao__c</fullName>
    <label>Mensagem erro de integração Confirmação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>