Git Tests/force-app/main/default/default/objects/Order/fields/MensagemErroIntegracaoRejeitado__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoRejeitado__c</fullName>
    <label>Mensagem erro de integração Rejeitado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>