Git Tests/force-app/main/default/default/objects/Order/fields/MensagemNF__c.field-meta.xml
<CustomField>
    <fullName>MensagemNF__c</fullName>
    <label>Mensagem da NF</label>
    <type>TextArea</type>
</CustomField>