Git Tests/force-app/main/default/default/objects/Order/fields/MessageIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>MessageIntegrationStatus__c</fullName>
    <label>Mensagem da integração de comprovante</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>