Git Tests/force-app/main/default/default/objects/Order/fields/ModificadoPor__c.field-meta.xml
<CustomField>
    <fullName>ModificadoPor__c</fullName>
    <label>Modificado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>