Git Tests/force-app/main/default/default/objects/Order/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo de cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desistência do cliente</fullName>
            </value>
            <value>
                <fullName>Cancelado para correção</fullName>
            </value>
            <value>
                <fullName>Falha operacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>