Git Tests/force-app/main/default/default/objects/Order/fields/MotivoRecusaIntegradora__c.field-meta.xml
<CustomField>
    <fullName>MotivoRecusaIntegradora__c</fullName>
    <label>Motivo da recusa da integradora</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>