Git Tests/force-app/main/default/default/objects/Order/fields/MotivoRejeicaoCartaTroca__c.field-meta.xml
<CustomField>
    <fullName>MotivoRejeicaoCartaTroca__c</fullName>
    <label>Motivo de rejeição da carta de troca</label>
    <type>TextArea</type>
</CustomField>