Git Tests/force-app/main/default/default/objects/Order/fields/NecessarioComprovante__c.field-meta.xml
<CustomField>
    <fullName>NecessarioComprovante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessário comprovante</label>
    <type>Checkbox</type>
</CustomField>