Git Tests/force-app/main/default/default/objects/Order/fields/NecessitaAprovacaoBonificacao__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacaoBonificacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita aprovação bonificação</label>
    <type>Checkbox</type>
</CustomField>