Git Tests/force-app/main/default/default/objects/Order/fields/NecessitaAprovacaoComercial__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacaoComercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita aprovação comercial</label>
    <type>Checkbox</type>
</CustomField>