Git Tests/force-app/main/default/default/objects/Order/fields/NecessitaAprovacaoMalha__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacaoMalha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita aprovação malha</label>
    <type>Checkbox</type>
</CustomField>