Git Tests/force-app/main/default/default/objects/Order/fields/NecessitaAprovacaoRegionalizacao__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacaoRegionalizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita aprovação regionalização</label>
    <type>Checkbox</type>
</CustomField>