Git Tests/force-app/main/default/default/objects/Order/fields/NomeMedico__c.field-meta.xml
<CustomField>
    <fullName>NomeMedico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescritor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Medico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>