Git Tests/force-app/main/default/default/objects/Order/fields/NomeMesa__c.field-meta.xml
<CustomField>
    <fullName>NomeMesa__c</fullName>
    <label>Mesa responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>