Git Tests/force-app/main/default/default/objects/Order/fields/Numero_da_Nota_Fiscal_Normalizado__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_Nota_Fiscal_Normalizado__c</fullName>
    <formula>SUBSTITUTE(
	SUBSTITUTE(
		SUBSTITUTE( NumeroNotaFiscal__c ,&quot;.&quot;,&quot;&quot;),
	&quot;/&quot;,&quot;&quot;),
&quot;-&quot;,&quot;&quot;)</formula>
    <label>Número da Nota Fiscal Normalizado</label>
    <type>Text</type>
</CustomField>