Git Tests/force-app/main/default/default/objects/Order/fields/NumeroNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NumeroNotaFiscal__c</fullName>
    <label>Número da nota fiscal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>