Git Tests/force-app/main/default/default/objects/Order/fields/NumeroPedidoCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoCliente__c</fullName>
    <inlineHelpText>Ex: AF123, OC345, ID6864</inlineHelpText>
    <label>Ordem de compra do cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>