Git Tests/force-app/main/default/default/objects/Order/fields/ObservacoesPedido__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesPedido__c</fullName>
    <label>Observações do pedido</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>