Git Tests/force-app/main/default/default/objects/Order/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Histórico</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>