Git Tests/force-app/main/default/default/objects/Order/fields/PedidoClonado__c.field-meta.xml
<CustomField>
    <fullName>PedidoClonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido clonado?</label>
    <type>Checkbox</type>
</CustomField>