Git Tests/force-app/main/default/default/objects/Order/fields/PedidoFilho__c.field-meta.xml
<CustomField>
    <fullName>PedidoFilho__c</fullName>
    <formula>NOT(ISNULL(PedidoPai__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido filho</label>
    <type>Checkbox</type>
</CustomField>