Git Tests/force-app/main/default/default/objects/Order/fields/PedidoFilhoFaturado__c.field-meta.xml
<CustomField>
    <fullName>PedidoFilhoFaturado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido filho faturado?</label>
    <type>Checkbox</type>
</CustomField>