Git Tests/force-app/main/default/default/objects/Order/fields/PedidoOriginal__c.field-meta.xml
<CustomField>
    <fullName>PedidoOriginal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido original</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos (Pedido original)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>