Git Tests/force-app/main/default/default/objects/Order/fields/PedidoPai__c.field-meta.xml
<CustomField>
    <fullName>PedidoPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido pai</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos filho</relationshipLabel>
    <relationshipName>PedidoFilho</relationshipName>
    <type>Lookup</type>
</CustomField>