Git Tests/force-app/main/default/default/objects/Order/fields/PedidoPaiCaixa__c.field-meta.xml
<CustomField>
    <fullName>PedidoPaiCaixa__c</fullName>
    <formula>if (RecordType.DeveloperName = &quot;PedidoMae&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido pai</label>
    <type>Checkbox</type>
</CustomField>