Git Tests/force-app/main/default/default/objects/Order/fields/PedidoPaiStatus__c.field-meta.xml
<CustomField>
    <fullName>PedidoPaiStatus__c</fullName>
    <formula>TEXT(PedidoPai__r.Status)</formula>
    <label>Status Pedido Pai</label>
    <type>Text</type>
</CustomField>