Git Tests/force-app/main/default/default/objects/Order/fields/PedidoPendente__c.field-meta.xml
<CustomField>
    <fullName>PedidoPendente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido pendente</label>
    <type>Checkbox</type>
</CustomField>