Git Tests/force-app/main/default/default/objects/Order/fields/PedidoProtheus__c.field-meta.xml
<CustomField>
    <fullName>PedidoProtheus__c</fullName>
    <formula>OrderNumber&amp;&quot;/&quot;&amp;ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido Protheus</label>
    <type>Text</type>
</CustomField>