Git Tests/force-app/main/default/default/objects/Order/fields/PedidoProtheusResumido__c.field-meta.xml
<CustomField>
    <fullName>PedidoProtheusResumido__c</fullName>
    <description>Campo criado para considerar apenas o número do pedido no Protheus (6 caracteres) sem o número do CD.</description>
    <label>Pedido Protheus resumido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>